k8s/mysql-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql
spec:
  clusterIP: None  # StatefulSet এর জন্য ClusterIP: None হওয়া জরুরি
  ports:
    - port: 3306
      targetPort: 3306  # TargetPort দিয়ে কনটেইনার পোর্টটি নির্দিষ্ট করা হচ্ছে
      protocol: TCP  # স্পেসিফিক্যালি TCP প্রোটোকল উল্লেখ
  selector:
    app: mysql
