k8s/b-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - pathType: ImplementationSpecific
        path: /api/?(.*)
        backend:
          service:
            name: backend-service
            port:
              number: 8080  # এখানে 8080 পোর্ট ব্যবহার করা হচ্ছে
